--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "ERROR: No README.md file found!",
   "main": "app.js",
   "scripts": {
+    "postinstall": "make",
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
