--- a/nginx.conf
+++ b/nginx.conf
@@ -24,7 +24,7 @@ http {
     gzip  on;
 
     proxy_cache_path /var/www/nginx_cache levels=1:2
-                     keys_zone=render-cache:10m;
+                     keys_zone=render-cache:10m
                      inactive=7d max_size=200m;
     proxy_temp_path /var/www/nginx_temp;
 
