Ignoring headers in nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,41 +5,45 @@ error_log  /var/log/nginx/error.log;
 pid        /var/run/nginx.pid;
 
 events {
-    worker_connections  1024;
+	worker_connections  1024;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
+	include       /etc/nginx/mime.types;
+	default_type  application/octet-stream;
 
-    access_log  /var/log/nginx/access.log;
+	access_log  /var/log/nginx/access.log;
 
-    sendfile        on;
-    #tcp_nopush     on;
+	sendfile        on;
+	#tcp_nopush     on;
 
-    #keepalive_timeout  0;
-    keepalive_timeout  65;
-    tcp_nodelay        on;
+	#keepalive_timeout  0;
+	keepalive_timeout  65;
+	tcp_nodelay        on;
 
-    gzip  on;
+	gzip  on;
 
-    proxy_cache_path /var/www/nginx_cache levels=1:2
-                     keys_zone=render-cache:10m
-                     inactive=7d max_size=200m;
-    proxy_temp_path /var/www/nginx_temp;
+	proxy_cache_path /var/www/nginx_cache levels=1:2
+					 keys_zone=render-cache:10m
+					 inactive=7d max_size=200m;
+	proxy_temp_path /var/www/nginx_temp;
 
-    server {
-        listen 80; # all interfaces
-        server_name ""; # all sites
+	server {
+		listen 80; # all interfaces
+		server_name ""; # all sites
 
-        location / {
-            proxy_pass http://localhost:3001;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+		location / {
+			proxy_pass http://localhost:3001;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
 
-            proxy_cache render-cache;
-            proxy_cache_key $request_uri;
-        }
-    }
+			proxy_cache render-cache;
+			proxy_cache_key $request_uri;
+
+			proxy_ignore_headers Expires;
+			proxy_ignore_headers Set-Cookie; 
+			proxy_ignore_headers Cache-Control; 
+		}
+	}
 
 }
