Experiment with proxy_cache_valid

--- a/nginx.conf
+++ b/nginx.conf
@@ -39,10 +39,9 @@ http {
 
 			proxy_cache render-cache;
 			proxy_cache_key $request_uri;
+			proxy_cache_valid any 7d;
 
-			proxy_ignore_headers Expires;
-			proxy_ignore_headers Set-Cookie; 
-			proxy_ignore_headers Cache-Control; 
+			proxy_ignore_headers X-Accel-Expires Expires Cache-Control Set-Cookie;
 		}
 	}
 
